--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,14 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    font-size: 16px;
+    font-family: Roboto, Arial, sans-serif;
+}
+
 nav {background-color: steelblue;
     padding: 10px;
 }
@@ -12,13 +23,20 @@ h1 {
     color: steelblue;
 }
 
-img{
+main img{
     width: 150px;
     height: auto;
     border: 1px solid steelblue;
     padding: 2px;
     box-shadow: 0 0 30px #333;
+    float: right;
+    margin: 0 0 1rem 1rem;
 }
+
+p{
+    margin: 1rem;
+}
+
 
 p{
     padding: 10px;
@@ -32,6 +50,7 @@ padding: 1em;
 background-color: #eee;
 color: #333;
 text-align: center;
+position: relative
 }
 
 aside img {
@@ -39,8 +58,26 @@ width: 200px;
 height: auto;
 }
 
+aside h2 {
+    position: absolute;
+    top: 30px;
+    left: 110px;
+}
+
 footer {
 margin-top: 1em;
 border-top: 1px solid #000;
 text-align: center;
+}
+/* Class Selectors */
+.box{
+    margin: 1rem;
+    border: 1px solid rgba(0,0,0,.1);
+    padding: 1rem;
+    background-color: #eee;
+    color: #000
+}
+
+.indent {
+    padding-left: 2rem;
 }
