--- a/index.html/wwr/styles/rafting.css
+++ b/index.html/wwr/styles/rafting.css
@@ -1,14 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Playwrite+AT:ital,wght@0,100..400;1,100..400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Itim&family=Playwrite+AT:ital,wght@0,100..400;1,100..400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-:root{
-    --primary-color:#FED9B7;
-    --secondary-color:#00AFB9;
-    --accent1-color:#F07167;
-    --accent2-color:#0081A7;
-    
-    --heading-font:'Playwrite AT', sans-serif;
-    --parragraph-font:'Itim', sans-serif;
+:root {
+
+    --primary-color: #FED9B7;
+    --secondary-color: #00AFB9;
+    --accent1-color: #F07167;
+    --accent2-color: #0081A7;
+
+    --heading-font: 'Playwrite AT', sans-serif;
+    --parragraph-font: 'Itim', sans-serif;
 
     --nav-background-color: #FED9B7;
     --nav-link-color: #0081A7;
@@ -16,12 +17,13 @@
     --nav-hover-background-color: #00AFB9;
 }
 
-h6, h5, h4, h3, h2, h1 {
+h2,
+h1 {
     /*--Playwrite AT*/
     font-family: var(--heading-font);
     color: var(--primary-color);
     padding: 20px;
-    max-width: 960px ;
+    max-width: 960px;
 }
 
 body {
@@ -33,29 +35,30 @@ body {
 
 }
 
-header{
+header {
     padding: 20px;
     background-color: var(--accent1-color);
 }
 
-p{
+p {
     padding: 25px;
 }
 
-nav{
+nav {
     background-color: var(--nav-background-color);
     font-size: 1.2rem;
     display: flex;
 }
 
-nav a{
+nav a {
     display: block;
     color: var(--nav-link-color);
     text-decoration: none;
     padding: 1rem;
 }
 
-nav a:link, nav a:visited{
+nav a:link,
+nav a:visited {
     color: var(--nav-link-color)
 }
 
@@ -65,18 +68,73 @@ nav a:hover {
 }
 
 .colors {
-    background-color:#FED9B7;
+    background-color: white;
 }
 
 .colors .primary {
     background-color: var(--primary-color);
 }
+
 .colors .secondary {
     background-color: var(--secondary-color);
 }
-.colors .accent1{
+
+.colors .accent1 {
     background-color: var(--accent1-color);
 }
-.colors .accent2{
+
+.colors .accent2 {
     background-color: var(--accent2-color);
+}
+
+nav a {
+    margin: 0 1rem;
+    color: white;
+    text-decoration: none;
+}
+
+.hero {
+    position: relative;
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.heroImg {
+    width: 100%;
+    height: 50vh;
+    object-fit: cover;
+    opacity: 0.5;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.stats {
+    position: relative;
+    z-index: 1;
+    padding: 2rem;
+}
+
+.stats h1 {
+    font-size: 2.5rem;
+    margin: 0;
+}
+
+article h4,
+.stats h1 {
+    width: 70%;
+    margin: 0;
+    color: black;
+}
+
+article img {
+    width: 20%;
+}
+
+.logo {
+    width: 10%;
+}
+
+.images{
+    display: inline-block;
 }
