--- a/styles/styles.css
+++ b/styles/styles.css
@@ -71,7 +71,7 @@ border-top: 1px solid #000;
 text-align: center;
 }
 /* Class Selectors */
-.box{
+.box {
     margin: 1rem;
     border: 1px solid rgba(0,0,0,.1);
     padding: 1rem;
@@ -81,4 +81,9 @@ text-align: center;
 
 .indent {
     padding-left: 2rem;
+}
+
+header, footer {
+    max-width:  840px; 
+    margin: 0 atuto;
 }
